# oscar-prpl-chivanet

./: .gitignore  README.md
oscarprpl/: CMakeLists.txt
oscarprpl/src/c/: clientlogin.c  internal.h  kerberos.c  libaim.c  oft.c  oscar.c  oscarcommon.h  peer.c  peer.h
